# genome_downloader

./: .gitignore  LISENCE  README.rst  download.py  gff_longest_transcript.py  pyproject.toml  setup.cfg
src/genome_downloader/: __main__.py  download.py
