[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name="genome_downloader"
authors = [{name="Sergej Andrejev", email="sandrejev@gmail.com"}]
readme = "README.rst"
description="A package to download genome, annotations and bowtie2 indexes"
keywords=['genomics', 'bioinformatics']
requires-python = ">=3.8"
version = "0.0.6"
dependencies = ["requests>=2", "httplib2>=0.12", "tqdm>=4", "pandas>=1.1", "numpy>=1.20", "pybedtools>=0.8"]
license = {file = "LICENSE.txt"}

[project.urls]
repository = "https://github.com/brainbreaks/genome_downloader"


